--- a/eda.ipynb
+++ b/eda.ipynb
@@ -6,7 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dask.dataframe as dd"
+    "#import packages\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "data = pd.read_csv(\"datasets/application_data.csv\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.head()"
    ]
   }
  ],
