streamlit app finish

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -627,6 +627,18 @@
     "plt.ylabel('Population')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With India and China, there was an upward trend throughout the years. However, with Vatican City the population decreases. Interesting fact: there are no hospitals in Vatican City so no births are recorded there; they also consume the most wine per head in the world. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
